--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "author": "allanPretty",
   "license": "UNLICENSED",
   "dependencies": {
+    "@replit/database": "^3.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "googleapis": "^144.0.0",
+    "nodemailer": "^6.9.16",
     "stripe": "^17.5.0"
   }
 }
